# r_rate_parser

./: .gitignore  DEPLOY_RAILWAY.md  README.md  RE_ Far East Wastepaper for April - Reudan.eml  current_progress_and_next_steps.md  freight_rate_scripting_phase_plan.md  mvp.md  pyproject.toml  railway.json  requirements.txt
UI/: README.md  Rate Lookup v1.dc.html  app.js  import.html  index.html  rate-desk.js  styles.css
UI/rates/: cosco.xlsx  haulage.xlsx  maersk.xlsx
data/templates/: cma_email_table_v1.yaml  cosco_matrix_v1.yaml  maersk_afls_site_to_site_v1.yaml  maersk_offer_block_v1.yaml  msc_far_east_v1.yaml
rate_ingest/: __init__.py  __main__.py  api.py  approve.py  canonical.py  classifier.py  cli.py  config.py  email_source.py  inspector.py  models.py  normalize.py  review.py  search.py  services.py  source_registry.py  template_matcher.py  utils.py  validate.py  warehouse.py
rate_ingest/parsers/: __init__.py  email_table.py  matrix.py  offer_block.py  site_to_site_rows.py  tabular_lane.py
rate_sheet_files/: MSC - FAR EAST RATES JAN.xlsx
tests/: test_rate_ingest_cli.py
