[project]
name = "freight-rate-ingest"
version = "0.1.0"
description = "Local-first scripting pipeline for freight rate sheet ingestion"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12,<5.0",
  "duckdb>=1.0,<2.0",
  "lxml>=5.0,<6.0",
  "openpyxl>=3.1,<4.0",
  "pandas>=2.0,<3.0",
  "pydantic>=2.0,<3.0",
  "python-dateutil>=2.9,<3.0",
  "pyyaml>=6.0,<7.0",
  "rich>=13.0,<14.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Workbook contains no default style:UserWarning",
  "ignore:Data Validation extension is not supported and will be removed:UserWarning",
]
